src/tui/render/snapshots/flutter_demon__tui__render__tests__normal_stopped.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                            Waiting for Flutter...                            │
│                                                                              │
│                Make sure you're in a Flutter project directory               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Stopped │ ⬇ Auto 0/0
