src/tui/render/snapshots/flutter_demon__tui__render__tests__search_input_mode.snap
---
source: src/tui/render/tests.rs
assertion_line: 274
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│ ○ Test Device                                                                │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                            Waiting for Flutter...                            │
│                                                                              │
│                Make sure you're in a Flutter project directory               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│/test query_ [No matches]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Starting │ Debug │ ✓ No errors │ ⬇ Auto 0/0
